--- a/index.html
+++ b/index.html
@@ -23,32 +23,35 @@
   </head>
 
   <body>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+
     <header class="jumbotron">
       <!-- <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p> -->
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-        <nav class="navbar fixed-top">
-            <div class="header-text">
-                  <h1 id="navbar-title">Work Day Planner</h1>
-                  <h2 id="navbar-subtitle"></h2>
-            </div>
-          </nav>
-            <form id='formPlanner'>
-          <div class="container" id="plannerContainer">
-              <!-- <ul id="planner"> </ul> -->
-              <!-- <div id="plannerContainer"> </div> -->
-          </div>    
-            </form>
-      
-        <!-- Start of  Footer -->
-          <nav class="navbar fixed-bottom footer">
-              <div class="footer-text">An original Website by clinton</div>
-          </nav>
+      <nav class="navbar fixed-top">
+        <div class="header-text">
+          <h1 id="navbar-title">Work Day Planner</h1>
+          <h2 id="navbar-subtitle"></h2>
+        </div>
+      </nav>
+      <form id="formPlanner">
+        <div class="container" id="plannerContainer">
+          <!-- <ul id="planner"> </ul> -->
+          <!-- <div id="plannerContainer"> </div> -->
+        </div>
+      </form>
 
+      <!-- Start of  Footer -->
+      <nav class="navbar fixed-bottom footer">
+        <div class="footer-text">An original Website by clinton</div>
+      </nav>
     </div>
     <!-- for the moment and jquery-->
     <script src="./script.js"></script>
