rmoving un necessary code and cleaning my code

--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
     ></script>
 
     <header class="jumbotron">
-      <!-- <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p> -->
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+        <!-- my nav bar -->
       <nav class="navbar fixed-top">
         <div class="header-text">
           <h1 id="navbar-title">Work Day Planner</h1>
